k8s/prod/apps-deployment.yaml
# 1. Namespace para organizar todo
apiVersion: v1
kind: Namespace
metadata:
  name: personal-ai

---
# 2. Service Interno para FastAPI
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: personal-ai
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 8000

---
# 3. Ingress: La puerta de entrada al clúster
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: personal-ai
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 80
      - path: /spark-ui
        pathType: Prefix
        backend:
          service:
            name: spark-thrift-svc
            port:
              number: 4040
---
# 4. Deployment de FastAPI
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: personal-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      hostAliases:
      - ip: "172.20.0.1"
        hostnames:
        - "host.k3d.internal"
      - ip: "172.30.16.1"
        hostnames:
        - "ollama.host.internal"
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
      - name: api
        image: personal_ai_api:latest
        imagePullPolicy: Never
        command: ["uvicorn", "src.api.main:app", "--host", "0.0.0.0", "--port", "8000", "--timeout-keep-alive", "120", "--loop", "asyncio"]
        resources:
          requests:
            cpu: "500m"
            memory: "1Gi"
          limits:
            cpu: "2000m"
            memory: "4Gi"
        ports:
        - containerPort: 8000
        volumeMounts:
          - name: kafka-ca-cert
            mountPath: /etc/kafka/certs
            readOnly: true
      volumes:
        - name: kafka-ca-cert
          secret:
            secretName: kafka-ca-cert

---
# 5. Deployment del Worker (Lo que KEDA va a escalar)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  namespace: personal-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      hostAliases:
      - ip: "172.20.0.1"
        hostnames:
        - "host.k3d.internal"
      - ip: "172.30.16.1"
        hostnames:
        - "ollama.host.internal"
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
      - name: worker
        image: personal_ai_worker:latest
        imagePullPolicy: Never
        command: ["celery", "-A", "src.workers.celery_app", "worker", "--loglevel=info", "--concurrency=2", "-E"]
        resources:
          requests:
            cpu: "50m"
            memory: "200Mi"
          limits:
            cpu: "500m"
            memory: "768Mi"
        volumeMounts:
          - name: kafka-ca-cert
            mountPath: /etc/kafka/certs
            readOnly: true

      volumes:
        - name: kafka-ca-cert
          secret:
            secretName: kafka-ca-cert

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-exporter
  namespace: personal-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-exporter
  template:
    metadata:
      labels:
        app: celery-exporter
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9808"
    spec:
      hostAliases:
      - ip: "172.20.0.1"
        hostnames:
        - "host.k3d.internal"
      - ip: "172.30.16.1"
        hostnames:
        - "ollama.host.internal"
      containers:
      - name: exporter
        image: danihodovic/celery-exporter:latest
        ports:
        - containerPort: 9808
          name: metrics
---
apiVersion: v1
kind: Service
metadata:
  name: celery-exporter-service
  namespace: personal-ai
  labels:
    app: celery-exporter
spec:
  selector:
    app: celery-exporter
  ports:
  - name: metrics
    port: 9808
    targetPort: 9808
  type: ClusterIP
